content/_generated-doc/2.7/config/quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_configuration]]link:#quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_quarkus.datasource.reactive]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_quarkus.datasource.reactive[quarkus.datasource.reactive]`

[.description]
--
If we create a Reactive datasource for this datasource.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_quarkus.datasource.-datasource-name-.reactive]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_quarkus.datasource.-datasource-name-.reactive[quarkus.datasource."datasource-name".reactive]`

[.description]
--
If we create a Reactive datasource for this datasource.
--|boolean 
|`true`

|===