content/_generated-doc/3.2/config/quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config.adoc

:summaryTableId: quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_configuration]]link:#quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_quarkus-datasource-reactive]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_quarkus-datasource-reactive[quarkus.datasource.reactive]`


[.description]
--
If we create a Reactive datasource for this datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE_REACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE_REACTIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_quarkus-datasource-datasource-name-reactive]]`link:#quarkus-reactive-datasource-config-group-data-source-reactive-build-time-config_quarkus-datasource-datasource-name-reactive[quarkus.datasource."datasource-name".reactive]`


[.description]
--
If we create a Reactive datasource for this datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_DATASOURCE__DATASOURCE_NAME__REACTIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===